[project]
name = "rest-api-tech-test-kit"
version = "1.0"
description = "REST API created as a solution to the first block of the technical test kit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "flask-marshmallow>=1.4.0",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=9.0.2",
]
